--- a/app/src/main/res/layout/general_info_form.xml
+++ b/app/src/main/res/layout/general_info_form.xml
@@ -25,16 +25,18 @@
         app:layout_constraintBottom_toBottomOf="@id/tvGeneralInfo"
         app:layout_constraintLeft_toRightOf="@id/tvGeneralInfo"
         app:layout_constraintTop_toTopOf="@id/tvGeneralInfo" />
-    <ImageView
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSaveGeneralInfo"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginLeft="8dp"
-        android:src="@drawable/ic_save_changes"
+        android:layout_width="wrap_content"
+        android:layout_height="26dp"
+        android:layout_marginRight="10dp"
+        style="@style/SecondaryButtonStyle"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="@id/tvGeneralInfo"
-        app:layout_constraintLeft_toRightOf="@id/tvGeneralInfo"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/tvGeneralInfo"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
     <com.example.leadcrm.ui.customviews.EditTextCustomView
         android:id="@+id/etLeadType"
