--- a/app/src/main/res/layout/edit_text_custom_view.xml
+++ b/app/src/main/res/layout/edit_text_custom_view.xml
@@ -10,16 +10,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_bg"
+        android:maxLines="1"
+        android:padding="12dp"
+        android:textColor="@color/dark_blue"
+        android:textColorHint="@color/edit_text_hint_color"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColorHint="@color/edit_text_hint_color"
-        android:textSize="16sp"
-        android:padding="12dp"
-        android:textColor="@color/dark_blue"
-        android:maxLines="1"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvLabel"
@@ -31,6 +30,7 @@
         android:text="Label"
         android:textColor="@color/edit_text_label_color"
         android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/editText"
         app:layout_constraintLeft_toLeftOf="@id/editText"
         app:layout_constraintTop_toTopOf="@id/editText" />
