--- a/app/src/main/res/layout/status_item_view.xml
+++ b/app/src/main/res/layout/status_item_view.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="6dp">
+    android:paddingVertical="6dp"
+    android:id="@+id/itemView"
+    android:padding="8dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvStatusColor"
