--- a/app/src/main/res/layout/fragment_lead_profile.xml
+++ b/app/src/main/res/layout/fragment_lead_profile.xml
@@ -69,7 +69,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="JH"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -83,7 +82,6 @@
                 android:background="@null"
                 android:enabled="false"
                 android:maxLength="15"
-                android:text="James"
                 android:textColor="@color/dark_blue"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -99,7 +97,6 @@
                 android:background="@null"
                 android:enabled="false"
                 android:maxLength="15"
-                android:text="Hetfield"
                 android:textColor="@color/dark_blue"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -133,7 +130,7 @@
                 android:id="@+id/tvId"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="ID: 65464"
+                android:text="ID:"
                 android:textColor="@color/grey"
                 android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="@+id/etName"
